# facron

./: .env.example  .gitignore  CHATGPT_REVIEW_README.md  Dockerfile  README.md  docker-compose.yml  prometheus.yml  pyproject.toml  run.bat  service_check.bat  service_install.bat  start.bat  start.vbs  start_hidden.cmd  stop.bat
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 08380b7909a9_add_performance_indexes.py  1c2d3e4f5a6b_add_analysis_logs_artifacts.py  9b7d4a1c2e3f_add_scrape_task_reviews.py  a1b2c3d4e5f6_refactor_for_review_scraping.py  b7c8d9e0f1a2_add_expected_pages.py  c772a2bb3817_initial_schema.py
docs/: API.md  MONITORING.md  OPTIMIZATION_REPORT.md  architecture.md
examples/: notepad_demo.json
scripts/: build_chatgpt_review_zip.py  run_dev.bat  run_dev.sh
src/review_scraper/: __init__.py  main.py
src/review_scraper/api/middleware/: error_handlers.py  metrics.py  rate_limit.py
src/review_scraper/api/routes/: analysis.py  frontend.py  products.py  reviews.py
src/review_scraper/core/: browser_pool.py  cache.py  config.py  database.py  logging.py  metrics.py  websocket.py
src/review_scraper/models/: __init__.py
src/review_scraper/modules/tmall_reviews/: __init__.py  analysis.py  collector.py  dedup.py  export.py  parser.py  report.py
src/review_scraper/web/static/: websocket_demo.html
src/review_scraper/workers/: celery_app.py  tasks.py
tests/: conftest.py  test_analysis.py  test_cache.py  test_frontend_overview.py  test_review_fixes.py  test_reviews_api.py  test_smoke.py
tools/redis/: redis.conf
(+14 files in other folders)
